WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134861
REGRESSION(
r171034
) [GTK] Build broken.
https://bugs.webkit.org/show_bug.cgi?id=134861
Summary
REGRESSION(r171034) [GTK] Build broken.
Javier Fernandez
Reported
2014-07-12 17:16:03 PDT
GTK Build was broken due to
r171034
<
http://trac.webkit.org/r171034
>
Attachments
Patch
(2.46 KB, patch)
2014-07-12 17:18 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(2.45 KB, patch)
2014-07-12 17:26 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(3.24 KB, patch)
2014-07-12 17:43 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(2.40 KB, patch)
2014-07-12 17:54 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2014-07-12 17:18:35 PDT
Created
attachment 234814
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-12 17:21:23 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Javier Fernandez
Comment 3
2014-07-12 17:26:48 PDT
Created
attachment 234815
[details]
Patch
Darin Adler
Comment 4
2014-07-12 17:38:19 PDT
Comment on
attachment 234815
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234815&action=review
> Source/WebKit2/UIProcess/API/gtk/PageClientImpl.cpp:395 > +void PageClientImpl::navigationGestureWillEnd(bool willNavigate, WebBackForwardListItem&) > +{ > +} > + > +void PageClientImpl::navigationGestureDidEnd(bool willNavigate, WebBackForwardListItem&) > +{ > +}
Should omit argument names here to avoid unused argument warnings.
Javier Fernandez
Comment 5
2014-07-12 17:43:12 PDT
Created
attachment 234816
[details]
Patch
Javier Fernandez
Comment 6
2014-07-12 17:54:07 PDT
Created
attachment 234818
[details]
Patch
WebKit Commit Bot
Comment 7
2014-07-12 18:10:17 PDT
Comment on
attachment 234818
[details]
Patch Clearing flags on attachment: 234818 Committed
r171040
: <
http://trac.webkit.org/changeset/171040
>
WebKit Commit Bot
Comment 8
2014-07-12 18:10:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug