REGRESSION(r171034) [GTK] Build broken. https://bugs.webkit.org/show_bug.cgi?id=134861

Unreviewed GTK build fix.


* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::navigationGestureDidBegin):
(WebKit::PageClientImpl::navigationGestureWillEnd):
(WebKit::PageClientImpl::navigationGestureDidEnd):
* UIProcess/API/gtk/PageClientImpl.h:


Canonical link: https://commits.webkit.org/152812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171040 268f45cc-cd09-0410-ab3c-d52691b4dbfc