Source/WebKit2/UIProcess/API/gtk/PageClientImpl.h
@@ -122,6 +122,10 @@ private:
 
     virtual void didFinishLoadingDataForCustomContentProvider(const String& suggestedFilename, const IPC::DataReference&) override;
 
+    virtual void navigationGestureDidBegin() override;
+    virtual void navigationGestureWillEnd(bool, WebBackForwardListItem&) override;
+    virtual void navigationGestureDidEnd(bool, WebBackForwardListItem&) override;
+
     virtual void doneWithTouchEvent(const NativeWebTouchEvent&, bool wasEventHandled) override;
 
     // Members of PageClientImpl class
